1주차 깃 허브 테스트트

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
             h1 폰트크기 테스트
         </h1>
         <p>
-            문자 p 태그 테스트
-        </p> 시발발
+            문자 p 태그 테스트 나는 바보다
+        </p>
     </body>
 </html>                
