--- a/index.html
+++ b/index.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
+<html lang="ko">
 <html>
-    <body>
-        <h1>
-            h1 폰트크기 테스트
-        </h1>
-        <p>
-            문자 p 태그 테스트 나는 바보다
-        </p>
+    <head>
+        <meta charset="UTF-8">
+        <title>LOL메인화면</title>
+    </head>
+    <body style="background-color:black">
+        <div style="display:flex; justify-content: center;">
+            <img src="image/asd.png" width="282" height="79">
+            <h3 style="font-size: 24px; font-weight: bold; font-style: italic; color: white; font-family: '굴림';">게임정보   기본정보    배고파    졸려    피곤해</h3>
+        </div>
+        <hr>
+        <div style="display: flex; justify-content: center;">
+        <img src="image/as.png" width="2530" height="961">    
+        </div>
     </body>
-</html>                
+</html>    
